[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/ui/TitleBanner.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/pausemenubg2.png" type="Texture" id=2]
[ext_resource path="res://src/ui/UiTextButtonLabel.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/fonts/BubbleRainbow-VGdn0.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/fonts/BarlowCondensed-BlackItalic.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://src/ui/GameOverMenu.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=4]
size = 35
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 25
outline_size = 3
outline_color = Color( 0.188235, 0.219608, 0.262745, 1 )
font_data = ExtResource( 4 )

[node name="GameOverMenu" type="CanvasLayer"]
pause_mode = 2
visible = false
script = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 728.0
color = Color( 0, 0, 0, 0.462745 )

[node name="TitleBanner" type="Sprite" parent="."]
position = Vector2( 640, 152 )
scale = Vector2( 4.5, 4.5 )
texture = ExtResource( 1 )

[node name="Pausemenubg" type="Sprite" parent="."]
position = Vector2( 640, 344 )
scale = Vector2( 4.33333, 4.33333 )
texture = ExtResource( 2 )

[node name="TitleLabel" type="Label" parent="."]
margin_left = 480.0
margin_top = 128.0
margin_right = 800.0
margin_bottom = 170.0
custom_colors/font_color = Color( 0.188235, 0.219608, 0.262745, 1 )
custom_fonts/font = SubResource( 4 )
text = "GAME OVER"
align = 1
valign = 1

[node name="RestartButton" type="TextureButton" parent="."]
margin_left = 608.0
margin_top = 504.0
margin_right = 680.0
margin_bottom = 536.0

[node name="Label" type="Label" parent="RestartButton"]
margin_right = 66.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 3 )
text = "Restart"

[node name="MainMenuButton" type="TextureButton" parent="."]
margin_left = 592.0
margin_top = 552.0
margin_right = 688.0
margin_bottom = 584.0

[node name="Label" type="Label" parent="MainMenuButton"]
margin_right = 47.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 3 )
text = "Main Menu"

[node name="StatsLabel" type="Label" parent="."]
margin_left = 552.0
margin_top = 216.0
margin_right = 736.0
margin_bottom = 472.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 5 )
text = "SCORE: 0
WPM: 0
ACCURACY: 0"
align = 1
valign = 1

[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
